Made style guide text elements section

--- a/style-guide.html
+++ b/style-guide.html
@@ -3,10 +3,77 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/style-guide.css">
+
+    <!-- Style sheet for Adobe Fonts -->
+    <link rel="stylesheet" href="https://use.typekit.net/prh3gfp.css">
+
     <title>Style Guide</title>
   </head>
 
   <body>
+    <header>
+      <img src="images/logo.png" alt="site-logo" class="logo-icon">
+      <nav>
+        <a href=#>Home</a>
+        <a href=#>Projects</a>
+        <a href=#>Contact</a>
+      </nav>
+    </header>
+
+    <h1>Style Guide</h1>
+
+<!-- Text Elements section-->
+    <section id="text_elements">
+      <h2>Text Elements</h2>
+
+      <section class="element">
+        <h3>Headings</h3>
+
+        <h4>Rendered Element: </h4>
+        <h1>Heading 1</h1>
+        <h2>Heading 2</h2>
+        <h3>Heading 3</h3>
+        <h4>Heading 4</h4>
+        <h5>Heading 5</h5>
+        <h6>Heading 6</h6>
+
+      </section>
+
+      <section class="element">
+        <h3>Paragraphs</h3>
+
+        <h4>Rendered Element:</h4>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Augue eget arcu dictum varius duis. Dignissim suspendisse in est ante in nibh. Vitae aliquet nec ullamcorper sit amet risus. Ut diam quam nulla porttitor massa id neque aliquam. Molestie ac feugiat sed lectus vestibulum mattis ullamcorper velit. Diam quam nulla porttitor massa id neque aliquam vestibulum. Duis at tellus at urna condimentum. Nisi quis eleifend quam adipiscing vitae proin. Enim nec dui nunc mattis. Blandit turpis cursus in hac habitasse platea. Eleifend donec pretium vulputate sapien nec.</p>
+
+      </section>
+
+      <section class="element">
+        <h3>Unordered list</h3>
+
+        <h4>Rendered Element:</h4>
+        <ul>
+          <li>Item 1</li>
+          <li>Item 2</li>
+          <li>Item 3</li>
+        </ul>
+      </section>
+
+    </section>
+
+    <section id="interactive_elements">
+      <h2>Interactive Elements</h2>
+
+      <section class="element">
+        <h3>In-text Link</h3>
+      </section>
+
+    </section>
+
+
+
 
   </body>
 </html>
