Improved site layout and image

--- a/style-guide.html
+++ b/style-guide.html
@@ -15,7 +15,7 @@
 
   <body>
     <header>
-      <img src="images/logo.png" alt="site-logo" class="logo-icon">
+      <img src="images/bright-logo.png" alt="site-logo" class="logo-icon">
       <nav>
         <a href=#>Home</a>
         <a href=#>Projects</a>
@@ -32,6 +32,9 @@
       <section class="element">
         <h3>Headings</h3>
 
+        <h4>CSS Selector</h4>
+        <p>h1, h2, h3, h4, h5, h6</p>
+
         <h4>Rendered Element: </h4>
         <h1>Heading 1</h1>
         <h2>Heading 2</h2>
@@ -45,6 +48,9 @@
       <section class="element">
         <h3>Paragraphs</h3>
 
+        <h4>CSS Selector</h4>
+        <p></p>
+
         <h4>Rendered Element:</h4>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Augue eget arcu dictum varius duis. Dignissim suspendisse in est ante in nibh. Vitae aliquet nec ullamcorper sit amet risus. Ut diam quam nulla porttitor massa id neque aliquam. Molestie ac feugiat sed lectus vestibulum mattis ullamcorper velit. Diam quam nulla porttitor massa id neque aliquam vestibulum. Duis at tellus at urna condimentum. Nisi quis eleifend quam adipiscing vitae proin. Enim nec dui nunc mattis. Blandit turpis cursus in hac habitasse platea. Eleifend donec pretium vulputate sapien nec.</p>
 
@@ -52,6 +58,9 @@
 
       <section class="element">
         <h3>Unordered list</h3>
+
+        <h4>CSS Selector</h4>
+        <p></p>
 
         <h4>Rendered Element:</h4>
         <ul>
@@ -68,6 +77,16 @@
 
       <section class="element">
         <h3>In-text Link</h3>
+
+        <h4>CSS Selector</h4>
+        <p></p>
+
+        <h4>Rendered Element:</h4>
+        <a href=# class="in-text-link">This is a link</a>
+      </section>
+
+      <section class="element">
+        <h3></h3>
       </section>
 
     </section>
