--- a/style-guide.html
+++ b/style-guide.html
@@ -15,15 +15,18 @@
 
   <body>
     <header>
-      <img src="images/bright-logo.png" alt="site-logo" class="logo-icon">
-      <nav>
-        <a href=#>Home</a>
-        <a href=#>Projects</a>
-        <a href=#>Contact</a>
-      </nav>
+      <div class="page-header flex-container">
+        <div>
+          <img src="images/bright-logo.png" alt="site-logo" class="logo-icon">
+          <nav>
+            <a href=#>Home</a>
+            <a href=#>Projects</a>
+            <a href=#>Contact</a>
+          </nav>
+        </div>
+        <h1 class="page-title">Style Guide</h1>
+      </div>
     </header>
-
-    <h1>Style Guide</h1>
 
 <!-- Text Elements section-->
     <section id="text_elements">
@@ -49,7 +52,7 @@
         <h3>Paragraphs</h3>
 
         <h4>CSS Selector</h4>
-        <p></p>
+        <p>p</p>
 
         <h4>Rendered Element:</h4>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Augue eget arcu dictum varius duis. Dignissim suspendisse in est ante in nibh. Vitae aliquet nec ullamcorper sit amet risus. Ut diam quam nulla porttitor massa id neque aliquam. Molestie ac feugiat sed lectus vestibulum mattis ullamcorper velit. Diam quam nulla porttitor massa id neque aliquam vestibulum. Duis at tellus at urna condimentum. Nisi quis eleifend quam adipiscing vitae proin. Enim nec dui nunc mattis. Blandit turpis cursus in hac habitasse platea. Eleifend donec pretium vulputate sapien nec.</p>
@@ -60,7 +63,7 @@
         <h3>Unordered list</h3>
 
         <h4>CSS Selector</h4>
-        <p></p>
+        <p>ul, li</p>
 
         <h4>Rendered Element:</h4>
         <ul>
@@ -79,14 +82,73 @@
         <h3>In-text Link</h3>
 
         <h4>CSS Selector</h4>
-        <p></p>
+        <p>.in-text-link</p>
 
         <h4>Rendered Element:</h4>
         <a href=# class="in-text-link">This is a link</a>
       </section>
 
       <section class="element">
-        <h3></h3>
+        <h3>Navigation Buttons</h3>
+
+        <h4>CSS Selector</h4>
+        <p>.button-nav</p>
+
+        <h4>Rendered Element:</h4>
+        <a class="button-nav button-sm" href="#">Default Button</a>
+        <a class="button-nav button-md" href="#">Default Button</a>
+        <a class="button-nav button-lg" href="#">Default Button</a>
+      </section>
+
+      <section class="element">
+        <h3>Image as a link</h3>
+
+        <h4>CSS Selector</h4>
+        <p>.image-as-link</p>
+
+        <h4>Rendered Element:</h4>
+        <img src="images/bright-logo.png" alt="site-logo" class="logo-icon image-as-link">
+
+      </section>
+    </section>
+
+    <section id="combined_elements">
+      <h2>Combined Elements</h2>
+
+      <section class="element">
+        <h3>Navigation bar</h3>
+
+        <h4>CSS Selector</h4>
+        <p>nav</p>
+
+        <h4>Rendered Element:</h4>
+        <div class="example-nav">
+          <img src="images/bright-logo.png" alt="site-logo" class="logo-icon image-as-link">
+          <nav>
+            <div>
+              <a href=#>Home</a>
+              <a href=#>Projects</a>
+              <a href=#>Contact</a>
+            </div>
+          </nav>
+        </div>
+
+      </section>
+
+      <section class="element">
+        <h3>Content with Image</h3>
+
+        <h4>CSS Selector</h4>
+        <p>.content-with-image</p>
+
+        <h4>Rendered Element:</h4>
+        <div class="content-with-image flex-container">
+          <img class="image-md" src="images/Lyra-Boss-1.png" alt="Image of a Boss Fight">
+            <div class="content">
+              <h3>Creating the Boss</h3>
+              <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas eget consequat sem. Maecenas porttitor ex orci, non faucibus nulla volutpat maximus. Aenean in mi non ante ultricies auctor. Maecenas feugiat diam sed sapien rhoncus vehicula. Curabitur facilisis dolor lacinia mollis imperdiet.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas eget consequat sem. Maecenas porttitor ex orci, non faucibus nulla volutpat maximus. </p>
+            </div>
+        </div>
       </section>
 
     </section>
