--- a/style-guide.html
+++ b/style-guide.html
@@ -16,14 +16,15 @@
   <body>
     <header>
       <div class="page-header flex-container">
-        <div>
-          <img src="images/bright-logo.png" alt="site-logo" class="logo-icon">
-          <nav>
+        <nav id="side-nav" class="hidden">
+          <img src="images/logo.png" alt="site-logo" id="logo" class="logo-icon image-as-link">
+          <div class="nav-flex-container">
             <a href=#>Home</a>
             <a href=#>Projects</a>
             <a href=#>Contact</a>
-          </nav>
-        </div>
+          </div>
+        </nav>
+        <img src="images/bright-logo.png" alt="site-logo" id="bright-logo" class="logo-icon image-as-link">
         <h1 class="page-title">Style Guide</h1>
       </div>
     </header>
@@ -123,12 +124,13 @@
 
         <h4>Rendered Element:</h4>
         <div class="example-nav">
-          <img src="images/bright-logo.png" alt="site-logo" class="logo-icon image-as-link">
+          <img src="images/logo.png" alt="site-logo" class="logo-icon image-as-link">
           <nav>
-            <div>
+            <div class="nav-flex-container">
               <a href=#>Home</a>
               <a href=#>Projects</a>
               <a href=#>Contact</a>
+              <a href=#>Style Guide</a>
             </div>
           </nav>
         </div>
@@ -153,8 +155,6 @@
 
     </section>
 
-
-
-
+    <script src="js/nav.js"></script>
   </body>
 </html>
