--- a/index.html
+++ b/index.html
@@ -3,10 +3,52 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Style Guide</title>
+
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/home.css">
+
+    <!-- Style sheet for Adobe Fonts -->
+    <link rel="stylesheet" href="https://use.typekit.net/prh3gfp.css">
+
+    <title>Home</title>
   </head>
 
   <body>
+    <header>
+      <div class="page-header flex-container">
+        <nav id="side-nav" class="hidden">
+          <img src="images/logo.png" alt="site-logo" id="logo" class="logo-icon image-as-link">
+          <div class="nav-flex-container">
+            <a href=#>Home</a>
+            <a href=#>Projects</a>
+            <a href=#>Contact</a>
+          </div>
+        </nav>
+        <img src="images/bright-logo.png" alt="site-logo" id="bright-logo" class="logo-icon image-as-link">
+        <h1 class="page-title">My Portfolio</h1>
+      </div>
+    </header>
 
+    <section>
+      <div class="hero-content-container">
+        <div class="hero-text-container">
+          <h2 class="site-title">EJ Nicolas</h1>
+          <a  href="product_listing.html" class="button-nav button-lg">Projects</a>
+          <a href="booking.html" class="button-nav button-lg">Contact Info</a>
+        </div>
+      </div>
+    </section>
+
+    <section>
+      <div class="content-with-image flex-container">
+        <img class="image-md" src="images/Lyra-Boss-1.png" alt="Image of a Boss Fight">
+          <div class="content">
+            <h2>About Me</h2>
+            <p> Hello! My name is Edjohn Joseph Nicolas, but I prefer to be called EJ for short. I am a third-year student in Simon Fraser University’s School of Interactive Arts and Technology (SIAT) working on a Bachelor of Science degree. I love video games and I want to pursue a career on programming or designing them. As I go through SIAT, I gain skills and experiences which will help me make games for people to play and enjoy. In terms of coding, I am experienced in C# for Unity the game engine, Java and JavaScript. Because of SIAT, I am also experienced in game design, level design, and working through an iterative and cooperative process. </p>
+          </div>
+      </div>
+    </section>
+
+    <script src="js/nav.js"></script>
   </body>
 </html>
