Fixed Home Page, started Projects page

--- a/index.html
+++ b/index.html
@@ -49,6 +49,14 @@
       </div>
     </section>
 
+    <footer>
+      <p>Created by EJ Nicolas - 2021</p>
+      <a class="in-text-link" href="index.html">Home</a>
+      <a class="in-text-link" href="projects.html">Projects</a>
+      <a class="in-text-link" href="contact.html">Contact</a>
+      <a class="in-text-link" href="style-guide.html">Style Guide</a>
+    </footer>
+
     <script src="js/nav.js"></script>
   </body>
 </html>
