--- a/projects.html
+++ b/projects.html
@@ -2,10 +2,31 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/projects.css">
+
+    <!-- Style sheet for Adobe Fonts -->
+    <link rel="stylesheet" href="https://use.typekit.net/prh3gfp.css">
+
     <title>Projects</title>
-    
+
   </head>
   <body>
+    <header>
+      <div class="page-header flex-container">
+        <nav id="side-nav" class="hidden">
+          <img src="images/logo.png" alt="site-logo" id="logo" class="logo-icon image-as-link">
+          <div class="nav-flex-container">
+            <a href=#>Home</a>
+            <a href=#>Projects</a>
+            <a href=#>Contact</a>
+          </div>
+        </nav>
+        <img src="images/bright-logo.png" alt="site-logo" id="bright-logo" class="logo-icon image-as-link">
+        <h1 class="page-title">Projects</h1>
+      </div>
+    </header>
 
+    <script src="js/nav.js"></script>
   </body>
-</html>>
+</html>
