Created Projects page

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
         <nav id="side-nav" class="hidden">
           <img src="images/logo.png" alt="site-logo" id="logo" class="logo-icon image-as-link">
           <div class="nav-flex-container">
-            <a href=#>Home</a>
-            <a href=#>Projects</a>
-            <a href=#>Contact</a>
+            <a href=index.html>Home</a>
+            <a href=projects.html>Projects</a>
+            <a href=contact.html>Contact</a>
           </div>
         </nav>
         <img src="images/bright-logo.png" alt="site-logo" id="bright-logo" class="logo-icon image-as-link">
@@ -33,8 +33,8 @@
       <div class="hero-content-container">
         <div class="hero-text-container">
           <h2 class="site-title">EJ Nicolas</h1>
-          <a  href="product_listing.html" class="button-nav button-lg">Projects</a>
-          <a href="booking.html" class="button-nav button-lg">Contact Info</a>
+          <a  href="projects.html" class="button-nav button-lg">Projects</a>
+          <a href="contact.html" class="button-nav button-lg">Contact Info</a>
         </div>
       </div>
     </section>
