--- a/projects.html
+++ b/projects.html
@@ -17,15 +17,41 @@
         <nav id="side-nav" class="hidden">
           <img src="images/logo.png" alt="site-logo" id="logo" class="logo-icon image-as-link">
           <div class="nav-flex-container">
-            <a href=#>Home</a>
-            <a href=#>Projects</a>
-            <a href=#>Contact</a>
+            <a href=index.html>Home</a>
+            <a href=projects.html>Projects</a>
+            <a href=contact.html>Contact</a>
           </div>
         </nav>
         <img src="images/bright-logo.png" alt="site-logo" id="bright-logo" class="logo-icon image-as-link">
         <h1 class="page-title">Projects</h1>
       </div>
     </header>
+
+    <div class="project-row-display flex-container element">
+      <section class="project-row-first">
+        <h2>Phantom's Cry: Lyra's Awakening</h2>
+        <h3>Role: Programmer, Game Designer, Level Designer</h3>
+        <img src="images/Lyra-gameplay.png" class="image-md" alt="Screenshot of gameplay from school project: Phantom's Cry: Lyra's Awakening">
+        <p>A sidescrolling platformer, inspired by Metroid-vania games. It features branching paths, open areas, and platforming with aiming challenges. This project shows off my game design and level design skills.</p>
+        <a class="button-nav button-md" href="project-lyra">Detailed Look</a>
+      </section>
+
+      <section class="project-row-second">
+        <h2>Ant Blast</h2>
+        <h3>Role: Programmer, Game Designer</h3>
+        <img src="images/Ant-gameplay.JPG" class="image-md" alt="Screenshot of gameplay from school project: Ant Blast">
+        <p>A short, quick thinking, randomly generating puzzle game. It scope is quite small, however it gave me an opportunity to experiment and learn how to design engaging game mechanics. This project shows off my game designing skills.</p>
+        <a class="button-nav button-md" href="project-lyra">Detailed Look</a>
+      </section>
+    </div>
+
+    <footer>
+      <p>Created by EJ Nicolas - 2021</p>
+      <a class="in-text-link" href="index.html">Home</a>
+      <a class="in-text-link" href="projects.html">Projects</a>
+      <a class="in-text-link" href="contact.html">Contact</a>
+      <a class="in-text-link" href="style-guide.html">Style Guide</a>
+    </footer>
 
     <script src="js/nav.js"></script>
   </body>
