--- a/style-guide.html
+++ b/style-guide.html
@@ -19,9 +19,9 @@
         <nav id="side-nav" class="hidden">
           <img src="images/logo.png" alt="site-logo" id="logo" class="logo-icon image-as-link">
           <div class="nav-flex-container">
-            <a href=#>Home</a>
-            <a href=#>Projects</a>
-            <a href=#>Contact</a>
+            <a href=index.html>Home</a>
+            <a href=projects.html>Projects</a>
+            <a href=contact.html>Contact</a>
           </div>
         </nav>
         <img src="images/bright-logo.png" alt="site-logo" id="bright-logo" class="logo-icon image-as-link">
@@ -152,8 +152,15 @@
             </div>
         </div>
       </section>
-
     </section>
+
+    <footer>
+      <p>Created by EJ Nicolas - 2021</p>
+      <a class="in-text-link" href="index.html">Home</a>
+      <a class="in-text-link" href="projects.html">Projects</a>
+      <a class="in-text-link" href="contact.html">Contact</a>
+      <a class="in-text-link" href="style-guide.html">Style Guide</a>
+    </footer>
 
     <script src="js/nav.js"></script>
   </body>
