Created Lyra Project page, reorganized images file

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
     <section>
       <div class="content-with-image flex-container">
-        <img class="image-md" src="images/Lyra-Boss-1.png" alt="Image of a Boss Fight">
+        <img class="image-md" src="images/Lyra/Lyra-boss.png" alt="Image of a Boss Fight">
           <div class="content">
             <h2>About Me</h2>
             <p> Hello! My name is Edjohn Joseph Nicolas, but I prefer to be called EJ for short. I am a third-year student in Simon Fraser University’s School of Interactive Arts and Technology (SIAT) working on a Bachelor of Science degree. I love video games and I want to pursue a career on programming or designing them. As I go through SIAT, I gain skills and experiences which will help me make games for people to play and enjoy. In terms of coding, I am experienced in C# for Unity the game engine, Java and JavaScript. Because of SIAT, I am also experienced in game design, level design, and working through an iterative and cooperative process. </p>
