--- a/project-lyra.html
+++ b/project-lyra.html
@@ -8,7 +8,7 @@
     <!-- Style sheet for Adobe Fonts -->
     <link rel="stylesheet" href="https://use.typekit.net/prh3gfp.css">
 
-    <title>Projects</title>
+    <title>Phantom's Cry: Lyra's Awakening</title>
 
   </head>
   <body>
@@ -23,9 +23,59 @@
           </div>
         </nav>
         <img src="images/bright-logo.png" alt="site-logo" id="bright-logo" class="logo-icon image-as-link">
-        <h1 class="page-title">Contact</h1>
+        <h1 class="page-title">Phantom's Cry: Lyra's Awakening</h1>
       </div>
     </header>
+
+    <section class="element">
+      <h2>Introduction</h2>
+      <div class="flex-container image-row">
+        <img src="images/Lyra/Lyra-title.png" alt="Phantom's Cry title screen" class="image-sm">
+        <img src="images/Lyra/Lyra-boss.png" alt="Phantom's Cry boss fight" class="image-sm">
+        <img src="images/Lyra/Lyra-gameplay-2.png" alt="Phantom's Cry gameplay" class="image-sm">
+      </div>
+      <p>In Fall of 2020, I had the opportunity to make a video game with a group in SIAT’s Foundations of Game Design course. We were required to make a video game which featured a narrative and non-linear gameplay within a span of 4 weeks. Our game is a 2D action-adventure platformer created on the Unity engine. Our game is called Phantom’s Cry and it focuses on exploration and utilizing three different attacks to solve puzzles and defeat enemies in the world.</p>
+      <p>For this project, I played many roles because I was the only programmer within my team. The graphics were shared among my teamates, Christine Drummond, Joyce Li, and Kylie Xu. For showcasing this project’s development, I will be focusing on my process of designing the game and its levels.</p>
+    </section>
+
+    <section class="element">
+      <h2>Starting Sketches</h2>
+      <div class="flex-container image-row">
+        <img src="images/Lyra/Lyra-sketch.png" alt="Phantom's Cry title early design sketch for gameplay" class="image-sm">
+        <img src="images/Lyra/Lyra-sketch-2.png" alt="Phantom's Cry early design sketch for map" class="image-sm">
+      </div>
+      <p>I first started on sketching ideas on paper to think about how the game would play. In the sketches above, I show how I imagined the actions players can do and what the game's entire map might look like.</p>
+    </section>
+
+    <section class="element">
+      <h2>Making the Game</h2>
+      <div class="image-row">
+        <img src="images/Lyra/Lyra-early-development.png" alt="Phantom's Cry in early development" class="image-sm">
+      </div>
+      <p>Creating the player and obstacles was a priority so I could design the levels around their capabilities. Also, during this process, I made many public variables which allows me to easily change their values to fine tune the game’s controls. This led the project to be very flexible and easily customizable, allowing me to test game feel and iterate. The given screenshot shows the game when it was early in development using temporary graphics as I tested the player's attacks.</p>
+    </section>
+
+    <section class="element">
+      <h2>Designing the Levels</h2>
+      <div class="image-row">
+        <img src="images/Lyra/Lyra-map-overview.png" alt="Phantom's Cry overview map" class="image-lg">
+      </div>
+      <p>The process of level design was important because much of the game’s enjoyment comes from the challenges given to them. I wanted levels to be complex and filled with exploration and secrets. The image is something I made for this project, but it does a good job on showcasing this area's complexity in its level design.</p>
+    </section>
+
+    <section class="element">
+      <h2>Getting Feedback</h2>
+      <div class="image-row">
+        <img src="images/Lyra/Lyra-early-feedback.png" alt="Phantom's Cry in early development with a certain issue on the presentation of the blue platform" class="image-sm">
+        <img src="images/Lyra/Lyra-late-feedback.png" alt="A later iteration of Phantom's Cry with a better version of the blue platform" class="image-sm">
+      </div>
+      <p>One of the most challenging aspects about this project was time. Every week our work was given feedback by the course’s teaching team and people we invited to play our game. Throughout development, players often faced issues with the game’s presentation and feedback. Players had trouble understanding what to do or functions of objects in the game.Some of these issues I was able to solve such as in Figures 11 and 12 where the transparent platform is supposed to convey a platform the player cannot land on unless they shoot it. However, due to limited time, I could not fix all presentation issues so I prioritized problems which would directly affect gameplay.</p>
+    </section>
+
+    <section class="element">
+      <h2>Conclusion</h2>
+      <p>Overall, this game was well received. Players liked the variety of challenges and puzzles the game offers. Similarly, the teaching team complimented our team on its gameplay and the amount of content we were able to include within a short time.</p>
+    </section>
 
     <footer>
       <p>Created by EJ Nicolas - 2021</p>
