--- a/projects.html
+++ b/projects.html
@@ -31,17 +31,17 @@
       <section class="project-row-first">
         <h2>Phantom's Cry: Lyra's Awakening</h2>
         <h3>Role: Programmer, Game Designer, Level Designer</h3>
-        <img src="images/Lyra-gameplay.png" class="image-md" alt="Screenshot of gameplay from school project: Phantom's Cry: Lyra's Awakening">
+        <img src="images/Lyra/Lyra-gameplay.png" class="image-md" alt="Screenshot of gameplay from school project: Phantom's Cry: Lyra's Awakening">
         <p>A sidescrolling platformer, inspired by Metroid-vania games. It features branching paths, open areas, and platforming with aiming challenges. This project shows off my game design and level design skills.</p>
-        <a class="button-nav button-md" href="project-lyra">Detailed Look</a>
+        <a class="button-nav button-md" href="project-lyra.html">Detailed Look</a>
       </section>
 
       <section class="project-row-second">
         <h2>Ant Blast</h2>
         <h3>Role: Programmer, Game Designer</h3>
-        <img src="images/Ant-gameplay.JPG" class="image-md" alt="Screenshot of gameplay from school project: Ant Blast">
+        <img src="images/Ant/Ant-gameplay.JPG" class="image-md" alt="Screenshot of gameplay from school project: Ant Blast">
         <p>A short, quick thinking, randomly generating puzzle game. It scope is quite small, however it gave me an opportunity to experiment and learn how to design engaging game mechanics. This project shows off my game designing skills.</p>
-        <a class="button-nav button-md" href="project-lyra">Detailed Look</a>
+        <a class="button-nav button-md" href="project-ant.html">Detailed Look</a>
       </section>
     </div>
 
