--- a/style-guide.html
+++ b/style-guide.html
@@ -145,7 +145,7 @@
 
         <h4>Rendered Element:</h4>
         <div class="content-with-image flex-container">
-          <img class="image-md" src="images/Lyra-Boss-1.png" alt="Image of a Boss Fight">
+          <img class="image-md" src="images/Lyra/Lyra-Boss-1.png" alt="Image of a Boss Fight">
             <div class="content">
               <h3>Creating the Boss</h3>
               <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas eget consequat sem. Maecenas porttitor ex orci, non faucibus nulla volutpat maximus. Aenean in mi non ante ultricies auctor. Maecenas feugiat diam sed sapien rhoncus vehicula. Curabitur facilisis dolor lacinia mollis imperdiet.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas eget consequat sem. Maecenas porttitor ex orci, non faucibus nulla volutpat maximus. </p>
