Finished Ant Project page

--- a/projects.html
+++ b/projects.html
@@ -40,7 +40,7 @@
         <h2>Ant Blast</h2>
         <h3>Role: Programmer, Game Designer</h3>
         <img src="images/Ant/Ant-gameplay.JPG" class="image-md" alt="Screenshot of gameplay from school project: Ant Blast">
-        <p>A short, quick thinking, randomly generating puzzle game. It scope is quite small, however it gave me an opportunity to experiment and learn how to design engaging game mechanics. This project shows off my game designing skills.</p>
+        <p>A short, quick thinking, procedurally generated puzzle game. It scope is quite small, however it gave me an opportunity to experiment and learn how to design engaging game mechanics. This project shows off my game designing skills.</p>
         <a class="button-nav button-md" href="project-ant.html">Detailed Look</a>
       </section>
     </div>
