Added job preferences and contact page

--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
     <!-- Style sheet for Adobe Fonts -->
     <link rel="stylesheet" href="https://use.typekit.net/prh3gfp.css">
 
-    <title>Projects</title>
+    <title>Contact</title>
 
   </head>
   <body>
@@ -26,6 +26,17 @@
         <h1 class="page-title">Contact</h1>
       </div>
     </header>
+
+    <section class="element">
+      <h2>Contact Options</h2>
+      <p>We can talk or ask more questions through these methods. I usually respond within one to two days. </p>
+      <address>
+        <p>Email (Most preffered): enicolas@sfu.ca</p>
+        <p>Phone: 778-111-2222</p>
+        <p>Linkedin: <a href="https://ca.linkedin.com/" class="in-text-link">EJNicolas</a></p>
+      </address>
+      <p>Thanks for getting in touch!</p>
+    </section>
 
     <footer>
       <p>Created by EJ Nicolas - 2021</p>
