Made website responsive

--- a/project-lyra.html
+++ b/project-lyra.html
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/main.css">
 
     <!-- Style sheet for Adobe Fonts -->
@@ -22,7 +23,7 @@
           </div>
         </nav>
         <img src="images/bright-logo.png" alt="site-logo" id="bright-logo" class="logo-icon image-as-link">
-        <h1 class="page-title">Phantom's Cry: Lyra's Awakening</h1>
+        <h1 class="page-title">Phantom's Cry</h1>
       </div>
     </header>
 
