--- a/projects.html
+++ b/projects.html
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/projects.css">
 
@@ -29,7 +30,7 @@
 
     <div class="project-row-display flex-container element">
       <section class="project-row-first">
-        <h2>Phantom's Cry: Lyra's Awakening</h2>
+        <h2>Phantom's Cry</h2>
         <h3>Role: Programmer, Game Designer, Level Designer</h3>
         <img src="images/Lyra/Lyra-gameplay.png" class="image-md" alt="Screenshot of gameplay from school project: Phantom's Cry: Lyra's Awakening">
         <p>A sidescrolling platformer, inspired by Metroid-vania games. It features branching paths, open areas, and platforming with aiming challenges. This project shows off my game design and level design skills.</p>
