--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <div class="hero-text-container">
           <h2 class="site-title">EJ Nicolas</h1>
           <a  href="projects.html" class="button-nav button-lg">Projects</a>
-          <a href="contact.html" class="button-nav button-lg">Contact Info</a>
+          <a href="contact.html" class="button-nav button-lg">Contact</a>
         </div>
       </div>
     </section>
