Added icon to tab

--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/projects.css">
+    <link rel="icon" href="images/logo.png">
 
     <!-- Style sheet for Adobe Fonts -->
     <link rel="stylesheet" href="https://use.typekit.net/prh3gfp.css">
