--- a/style-guide.html
+++ b/style-guide.html
@@ -6,6 +6,8 @@
 
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/style-guide.css">
+    <!-- icon attribute from https://www.w3schools.com/tags/att_link_sizes.asp -->
+    <link rel="icon" href="images/logo.png">
 
     <!-- Style sheet for Adobe Fonts -->
     <link rel="stylesheet" href="https://use.typekit.net/prh3gfp.css">
