--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/home.css">
-
+    <link rel="icon" href="images/logo.png">
     <!-- Style sheet for Adobe Fonts -->
     <link rel="stylesheet" href="https://use.typekit.net/prh3gfp.css">
 
