Made nav better and tab-able

--- a/style-guide.html
+++ b/style-guide.html
@@ -18,15 +18,15 @@
     <header>
       <div class="page-header flex-container">
         <nav id="side-nav">
-          <img src="images/logo.png" alt="close side nav" id="logo" class="logo-icon image-as-link" tabindex="0">
+          <img src="images/logo.png" alt="close side nav" id="logo" class="logo-icon image-as-link hidden" tabindex="0">
           <div class="nav-flex-container">
-            <a href=index.html>Home</a>
-            <a href=projects.html>Projects</a>
-            <a href=contact.html>Contact</a>
+            <a href=index.html class="nav-link hidden">Home</a>
+            <a href=projects.html class="nav-link hidden">Projects</a>
+            <a href=contact.html class="nav-link hidden">Contact</a>
           </div>
         </nav>
         <img src="images/bright-logo.png" alt="open side nav" id="bright-logo" class="logo-icon image-as-link" tabindex="1">
-        <h1 class="page-title">Style Guide</h1>
+        <h1 class="page-title">My Portfolio</h1>
       </div>
     </header>
 
