Added animated icon

--- a/style-guide.html
+++ b/style-guide.html
@@ -25,6 +25,7 @@
             <a href=contact.html class="nav-link hidden">Contact</a>
           </div>
         </nav>
+        <div class="logo-background"> </div>
         <img src="images/bright-logo.png" alt="open side nav" id="bright-logo" class="logo-icon image-as-link" tabindex="1">
         <h1 class="page-title">My Portfolio</h1>
       </div>
@@ -109,7 +110,7 @@
         <p>.image-as-link</p>
 
         <h4>Rendered Element:</h4>
-        <img src="images/bright-logo.png" alt="site-logo" class="logo-icon image-as-link">
+        <img src="images/bright-logo.png" alt="site-logo" class="image-as-link">
 
       </section>
     </section>
@@ -125,7 +126,7 @@
 
         <h4>Rendered Element:</h4>
         <div class="example-nav">
-          <img src="images/logo.png" alt="site-logo" class="logo-icon image-as-link">
+          <img src="images/logo.png" alt="site-logo" class="image-as-link">
           <nav>
             <div class="nav-flex-container">
               <a href=#>Home</a>
