--- a/projects.html
+++ b/projects.html
@@ -25,6 +25,7 @@
             <a href=contact.html class="nav-link hidden">Contact</a>
           </div>
         </nav>
+        <div class="logo-background"> </div>
         <img src="images/bright-logo.png" alt="open side nav" id="bright-logo" class="logo-icon image-as-link" tabindex="1">
         <h1 class="page-title">My Portfolio</h1>
       </div>
