Fixed titles, tweaked logo

--- a/contact.html
+++ b/contact.html
@@ -26,12 +26,12 @@
         </nav>
         <div class="logo-background"> </div>
         <img src="images/bright-logo.png" alt="open side nav" id="bright-logo" class="logo-icon image-as-link" tabindex="1">
-        <h1 class="page-title">My Portfolio</h1>
+        <h1 class="page-title">Contact</h1>
       </div>
     </header>
 
     <section class="element">
-      <h2>Contact Options</h2>
+      <h2>Contact Methods</h2>
       <p>We can talk or ask more questions through these methods. I usually respond within one to two days. </p>
       <address>
         <p>Email (Most preffered): enicolas@sfu.ca</p>
