--- a/projects.html
+++ b/projects.html
@@ -27,7 +27,7 @@
         </nav>
         <div class="logo-background"> </div>
         <img src="images/bright-logo.png" alt="open side nav" id="bright-logo" class="logo-icon image-as-link" tabindex="1">
-        <h1 class="page-title">My Portfolio</h1>
+        <h1 class="page-title">Projects</h1>
       </div>
     </header>
 
