--- a/projects.html
+++ b/projects.html
@@ -25,9 +25,10 @@
             <a href=contact.html class="nav-link hidden">Contact</a>
           </div>
         </nav>
-        <div class="logo-background"> </div>
-        <img src="images/bright-logo.png" alt="open side nav" id="bright-logo" class="logo-icon image-as-link" tabindex="1">
-        <h1 class="page-title">Projects</h1>
+        <div class="logo-background">
+           <img src="images/bright-logo.png" alt="open side nav" id="bright-logo" class="logo-icon image-as-link" tabindex="1">
+        </div>
+         <h1 class="page-title">Projects</h1>
       </div>
     </header>
 
