Added more content to style guide

--- a/style-guide.html
+++ b/style-guide.html
@@ -111,7 +111,7 @@
         <p>.image-as-link</p>
 
         <h4>Rendered Element:</h4>
-        <img src="images/bright-logo.png" alt="site-logo" class="image-as-link">
+        <img src="images/bright-logo.png" alt="site-logo" class="example-logo image-as-link">
 
       </section>
     </section>
@@ -133,7 +133,6 @@
               <a href=#>Home</a>
               <a href=#>Projects</a>
               <a href=#>Contact</a>
-              <a href=#>Style Guide</a>
             </div>
           </nav>
         </div>
@@ -148,13 +147,55 @@
 
         <h4>Rendered Element:</h4>
         <div class="content-with-image flex-container">
-          <img class="image-md" src="images/Lyra/Lyra-Boss-1.png" alt="Image of a Boss Fight">
+          <img class="image-sm" src="images/portrait.jpg" alt="Image of a Boss Fight">
             <div class="content">
-              <h3>Creating the Boss</h3>
-              <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas eget consequat sem. Maecenas porttitor ex orci, non faucibus nulla volutpat maximus. Aenean in mi non ante ultricies auctor. Maecenas feugiat diam sed sapien rhoncus vehicula. Curabitur facilisis dolor lacinia mollis imperdiet.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas eget consequat sem. Maecenas porttitor ex orci, non faucibus nulla volutpat maximus. </p>
+              <h2>About Me</h2>
+              <p> Hello! My name is Edjohn Joseph Nicolas, but I prefer to be called EJ for short. I am a third-year student in Simon Fraser University’s School of Interactive Arts and Technology (SIAT) working on a Bachelor of Science degree. I love video games and I want to pursue a career on programming or designing them. As I go through SIAT, I gain skills and experiences which will help me make games for people to play and enjoy. In terms of coding, I am experienced in C# for Unity the game engine, Java and JavaScript. Because of SIAT, I am also experienced in game design, level design, and working through an iterative and cooperative process. My interests are fighting games, platformers, character action games, cinematography, history and nature.</p>
             </div>
         </div>
       </section>
+    </section>
+
+    <section class="element">
+      <h3>Hero Content</h3>
+
+      <h4>CSS Selector:</h4>
+      <p>.hero-content-container</p>
+
+      <h4>Rendered Element:</h4>
+      <div class="hero-content-container">
+        <div class="hero-text-container">
+          <h2 class="site-title">EJ Nicolas</h1>
+          <a  href="projects.html" class="button-nav button-lg">Projects</a>
+          <a href="contact.html" class="button-nav button-lg">Contact</a>
+        </div>
+      </div>
+    </section>
+
+    <section class="element">
+      <h3>Project Row Display</h3>
+
+      <h4>CSS Selector:</h4>
+      <p>.project-row-display</p>
+
+      <h4>Rendered Element</h4>
+      <div class="project-row-display flex-container">
+        <section class="project-row-first">
+          <h2>Phantom's Cry</h2>
+          <h3>Role: Programmer, Game Designer, Level Designer</h3>
+          <img src="images/Lyra/Lyra-gameplay.png" class="image-md" alt="Screenshot of gameplay from school project: Phantom's Cry: Lyra's Awakening">
+          <p>A sidescrolling platformer, inspired by Metroid-vania games. It features branching paths, open areas, and platforming with aiming challenges. This project shows off my game design and level design skills.</p>
+          <a class="button-nav button-md" href="project-lyra.html">Detailed Look</a>
+        </section>
+
+        <section class="project-row-second">
+          <h2>Ant Blast</h2>
+          <h3>Role: Programmer, Game Designer</h3>
+          <img src="images/Ant/Ant-gameplay.JPG" class="image-md" alt="Screenshot of gameplay from school project: Ant Blast">
+          <p>A short, quick thinking, procedurally generated puzzle game. It scope is quite small, however it gave me an opportunity to experiment and learn how to design engaging game mechanics. This project shows off my game designing skills.</p>
+          <a class="button-nav button-md" href="project-ant.html">Detailed Look</a>
+        </section>
+      </div>
     </section>
 
     <footer>
