Proofread through text and edited some text. Added git repo to footer

--- a/project-ant.html
+++ b/project-ant.html
@@ -39,7 +39,7 @@
         <img src="images/Ant/Ant-gameplay-2.JPG" alt="Ant Blast screenshot of gameplay" class="image-sm">
       </div>
       <p>On my fall 2020 semester, I took a Foundations of Game Design course in SFU’s School of Interactive Arts and Technology. My group and I were tasked to redesign a game and introduce new mechanics to make it more fun and engaging. We had three weeks to complete the project and we used the Unity game engine to create it.</p>
-      <p>I lead the team on creating the game, its programming and the game design. My three other teammates, Christine Drummond, Joyce Li, and Kylie Xu, were responsible of the game’s graphics and art. I will be going through my progress of designing the game.</p>
+      <p>I lead the team on creating the game, its programming and the game design. My three other team mates were responsible of the game’s graphics and art. I will be going through my progress of designing the game.</p>
     </section>
 
     <section class="element">
@@ -48,16 +48,24 @@
         <img src="images/Ant/Ant-sketch.jpg" alt="Early design sketches for what the game may include" class="image-sm">
         <img src="images/Ant/Ant-sketch-2.jpg" alt="Early sketch on how the game will play" class="image-sm">
       </div>
-      <p>These sketches above show my ideas for the game. At this point, I knew I wanted to make a game that made player think about their surroundings and create a fast route with a strict time limit inside a procedurally generated area. I also wanted to implement a risk/reward mechanic where players can spend limited resources to remove obstacles in their path. The game’s concept was playing an ant trying to escape an ant lion’s pit. The player could find other ants and they could sacrifice them to remove one obstacle in their path such as a rock or slow the ant lion by letting one them get eaten. After pitching this idea to our professor and teacher assistant, they didn’t like its morbidity, so we needed to come up with a different idea.</p>
+      <p> The game’s concept was playing an ant trying to escape an ant lion’s pit. At this point, I knew I wanted to make a game that made player think about their surroundings and create a fast route with a strict time limit inside a procedurally generated area. I also wanted to implement a risk/reward mechanic where players can spend limited resources to remove obstacles in their path. This concept lead to the idea of . After pitching this idea to our professor and teacher assistant, they didn’t like its morbidity, so we needed to come up with a different idea.</p>
     </section>
 
     <section class="element">
-      <h2>Working through Iterations</h2>
+      <h2>The First Iteration</h2>
       <div class="image-row">
-        <img src="images/Ant/Ant-early-game.JPG" alt="Early iteration of Ant Blast" class="image-sm">
-        <img src="images/Ant/Ant-late-game.JPG" alt="Later iteration of Ant Blast" class="image-sm">
+        <img src="images/Ant/Ant-early-game.JPG" alt="Early iteration of Ant Blast" class="image-md">
       </div>
-      <p>My new concept was having the ability to push rocks around similar to pushing blocks in 2D Legend of Zelda games. This would give the player more options on their pathing as they can alter the world around them. I also thought about giving the player a limited number of bombs which they can use to blow up rocks or temporarily stop the ant lion. This was inspired by the ant sacrificing mechanic of using resources to solve problems. We were quite happy with this idea and so I started creating the game on Unity. The image on the left is an early prototype of the game, using temporary graphics and was a testing ground for pushing rocks, procedural generation and sand being thrown at the player. We had playtesters try out this prototype and they had issues with the ant lion’s speed, found bugs while the right is from a later prototype where we added the graphics, and tweaked aspects that our playtesters had issues with.</p>
+      <p>My new concept was having the ability to push rocks around similar to pushing blocks in 2D Legend of Zelda games. This would give the player more options on their pathing as they can alter the world around them. I also thought about giving the player a limited number of bombs which they can use to blow up rocks or temporarily stop the ant lion. This was inspired by the ant sacrificing mechanic of using resources to solve problems. We were quite happy with this idea and so I started creating the game on Unity. The image shown is an early prototype of the game.</p>
+    </section>
+
+    <section class="element">
+      <h2>Playtesting and Improving</h2>
+      <div class="image-row">
+        <img src="images/Ant/Ant-late-game.JPG" alt="Later iteration of Ant Blast" class="image-md">
+      </div>
+      <p>Through playtesting the first prototype, some players had trouble with the game's difficulty (though experienced video game players thought the game was too easy), found bugs when pushing rocks,  thought the game was too simple and had issues with the game's presentation and UI. With this information, I went back into Unity to try and address these issues. Within a week, I added new mechanics, difficulty settings, fixed up most of the rock pushing bugs and placed the graphics when my team finished them. The state of the game was now the image you see above. We had playtesters try out the new version and it was more well recieved. The game gave them a sense of urgency and the new points and buffs system added more enjoyment. However, there were still issues with the game's presentation, UI and feedback that I didn't have the time to address. This is when we handed in the project and development ended.</p>
+
     </section>
 
     <section class="element">
@@ -71,6 +79,7 @@
       <a class="in-text-link" href="projects.html">Projects</a>
       <a class="in-text-link" href="contact.html">Contact</a>
       <a class="in-text-link" href="style-guide.html">Style Guide</a>
+      <a class="in-text-link" href="https://github.com/EJNicolas/IAT339-Portfolio">Git Repository</a>
     </footer>
 
     <script src="js/nav.js"></script>
