--- a/contact.html
+++ b/contact.html
@@ -33,13 +33,13 @@
 
     <section class="element">
       <h2>Contact Methods</h2>
-      <p>We can talk or ask more questions through these methods. I usually respond within one to two days. </p>
+      <p>Let's chat through the methods shown below. I usually respond pretty quick, within one to two days.</p>
       <address>
-        <p>Email (Most preffered): enicolas@sfu.ca</p>
+        <p>Email (Most preferred): enicolas@sfu.ca</p>
         <p>Phone: 778-111-2222</p>
         <p>Linkedin: <a href="https://ca.linkedin.com/" class="in-text-link">EJNicolas</a></p>
       </address>
-      <p>Thanks for getting in touch!</p>
+      <p>Thanks for getting in touch and I hope we can work together in the future!</p>
     </section>
 
     <footer>
@@ -48,6 +48,7 @@
       <a class="in-text-link" href="projects.html">Projects</a>
       <a class="in-text-link" href="contact.html">Contact</a>
       <a class="in-text-link" href="style-guide.html">Style Guide</a>
+      <a class="in-text-link" href="https://github.com/EJNicolas/IAT339-Portfolio">Git Repository</a>
     </footer>
 
     <script src="js/nav.js"></script>
