--- a/index.html
+++ b/index.html
@@ -48,14 +48,14 @@
         <img class="image-sm" src="images/portrait.jpg" alt="Image of a Boss Fight">
           <div class="content">
             <h2>About Me</h2>
-            <p> Hello! My name is Edjohn Joseph Nicolas, but I prefer to be called EJ for short. I am a third-year student in Simon Fraser University’s School of Interactive Arts and Technology (SIAT) working on a Bachelor of Science degree. I love video games and I want to pursue a career on programming or designing them. As I go through SIAT, I gain skills and experiences which will help me make games for people to play and enjoy. In terms of coding, I am experienced in C# for Unity the game engine, Java and JavaScript. Because of SIAT, I am also experienced in game design, level design, and working through an iterative and cooperative process. My interests are fighting games, platformers, character action games, cinematography, history and nature.</p>
+            <p> Hello! My name is Edjohn Joseph Nicolas, but I prefer to be called EJ for short. I am a third-year student in Simon Fraser University’s School of Interactive Arts and Technology (SIAT) working on a Bachelor of Science degree. I love video games and I want to pursue a career on programming or designing them. While I work for my degree, I am gaining skills and experiences which will help me make games for people to play and enjoy. In terms of coding, I am proficient in C# for Unity the game engine, Java and JavaScript. I am also experienced in game design, level design, and working through an iterative and cooperative process. My interests are fighting games, platformers, character action games, cinematography, history and nature.</p>
           </div>
       </div>
     </section>
 
     <section class="element">
       <h2>Employment Interests</h2>
-      <p>I am interested in joining the game industry as a game designer or programmer, working projects either large or small, 2D or 3D in any size company. I am also open on working other roles within the industry such as QA and other designing roles, but I believe my skills and experiences I gained from SIAT are best suited for game design and programming. I would also be interested on being a cinematographer, for movies or games as SIAT has given me experience on shooting and framing our own videos.</p>
+      <p>I am interested in joining the game industry as a game designer or programmer, working projects either large or small, 2D or 3D in any size company. I am also open on working other roles within the industry such as QA or other designing roles, but I believe my skills and experiences are best suited for game design and programming. I would also be interested on being a cinematographer, for movies or games as SIAT has given me experience on shooting our own videos.</p>
     </section>
 
     <footer>
@@ -64,6 +64,7 @@
       <a class="in-text-link" href="projects.html">Projects</a>
       <a class="in-text-link" href="contact.html">Contact</a>
       <a class="in-text-link" href="style-guide.html">Style Guide</a>
+      <a class="in-text-link" href="https://github.com/EJNicolas/IAT339-Portfolio">Git Repository</a>
     </footer>
 
     <script src="js/nav.js"></script>
