--- a/project-lyra.html
+++ b/project-lyra.html
@@ -39,7 +39,7 @@
         <img src="images/Lyra/Lyra-gameplay-2.png" alt="Phantom's Cry gameplay" class="image-sm">
       </div>
       <p>In Fall of 2020, I had the opportunity to make a video game with a group in SIAT’s Foundations of Game Design course. We were required to make a video game which featured a narrative and non-linear gameplay within a span of 4 weeks. Our game is a 2D action-adventure platformer created on the Unity engine. Our game is called Phantom’s Cry and it focuses on exploration and utilizing three different attacks to solve puzzles and defeat enemies in the world.</p>
-      <p>For this project, I played many roles because I was the only programmer within my team. The graphics were shared among my teamates, Christine Drummond, Joyce Li, and Kylie Xu. For showcasing this project’s development, I will be focusing on my process of designing the game and its levels.</p>
+      <p>For this project, I was the only programmer in my group so I took on many roles. The graphics were shared among my team mates. For showcasing this project’s development, I will be focusing on my process of designing the game and its levels.</p>
     </section>
 
     <section class="element">
@@ -56,7 +56,7 @@
       <div class="image-row">
         <img src="images/Lyra/Lyra-early-development.png" alt="Phantom's Cry in early development" class="image-sm">
       </div>
-      <p>Creating the player and obstacles was a priority so I could design the levels around their capabilities. Also, during this process, I made many public variables which allows me to easily change their values to fine tune the game’s controls. This led the project to be very flexible and easily customizable, allowing me to test game feel and iterate. The given screenshot shows the game when it was early in development using temporary graphics as I tested the player's attacks.</p>
+      <p>Creating the player and obstacles was a priority so I could design the levels around their capabilities. During this early phase, I made the game very customizable so I could hone down the game's movement and its shooting mechanics. The given screenshot shows the game when it was early in development using temporary graphics as I tested the player's attacks.</p>
     </section>
 
     <section class="element">
@@ -64,7 +64,7 @@
       <div class="image-row">
         <img src="images/Lyra/Lyra-map-overview.png" alt="Phantom's Cry overview map" class="image-lg">
       </div>
-      <p>The process of level design was important because much of the game’s enjoyment comes from the challenges given to them. I wanted levels to be complex and filled with exploration and secrets. The image is something I made for this project, but it does a good job on showcasing this area's complexity in its level design.</p>
+      <p>The process of level design was important because much of the game’s enjoyment comes from the challenges given to them. I wanted levels to be complex, filled with exploration and secrets. The image is something I made for this project, but it does a good job on showcasing this area's complexity in its level design.</p>
     </section>
 
     <section class="element">
@@ -73,7 +73,7 @@
         <img src="images/Lyra/Lyra-early-feedback.png" alt="Phantom's Cry in early development with a certain issue on the presentation of the blue platform" class="image-sm">
         <img src="images/Lyra/Lyra-late-feedback.png" alt="A later iteration of Phantom's Cry with a better version of the blue platform" class="image-sm">
       </div>
-      <p>One of the most challenging aspects about this project was time. Every week our work was given feedback by the course’s teaching team and people we invited to play our game. Throughout development, players often faced issues with the game’s presentation and feedback. Players had trouble understanding what to do or functions of objects in the game.Some of these issues I was able to solve such as in Figures 11 and 12 where the transparent platform is supposed to convey a platform the player cannot land on unless they shoot it. However, due to limited time, I could not fix all presentation issues so I prioritized problems which would directly affect gameplay.</p>
+      <p>One of the most challenging aspects about this project was time. Every week our work was given feedback by the course’s teaching team and people we invited to play our game. Throughout development, players often faced issues with the game’s presentation and feedback. Some players had some trouble understanding what to do or what objects did. Some of these issues I was able to solve such as the images above where the transparent platform is supposed to convey a platform the player cannot land on unless they shoot it. However, due to limited time, I could not fix all presentation issues so I prioritized problems such as crashes, lack of checkpoints and other game breaking bugs.</p>
     </section>
 
     <section class="element">
@@ -87,6 +87,7 @@
       <a class="in-text-link" href="projects.html">Projects</a>
       <a class="in-text-link" href="contact.html">Contact</a>
       <a class="in-text-link" href="style-guide.html">Style Guide</a>
+      <a class="in-text-link" href="https://github.com/EJNicolas/IAT339-Portfolio">Git Repository</a>
     </footer>
 
     <script src="js/nav.js"></script>
