--- a/projects.html
+++ b/projects.html
@@ -56,6 +56,7 @@
       <a class="in-text-link" href="projects.html">Projects</a>
       <a class="in-text-link" href="contact.html">Contact</a>
       <a class="in-text-link" href="style-guide.html">Style Guide</a>
+      <a class="in-text-link" href="https://github.com/EJNicolas/IAT339-Portfolio">Git Repository</a>
     </footer>
 
     <script src="js/nav.js"></script>
